<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/jlg_tracker"
        app:srcCompat="@drawable/jlg_tracker"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewUrlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="32dp"
        android:text="@string/url_where_to_send_geoloc"
        android:labelFor="@id/editTextUrl"
        />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUrlLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:text="@string/http_localhost_3000_api_geoloc" />

    <TextView
        android:id="@+id/textViewDelayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUrl"
        android:layout_marginTop="32dp"
        android:text="@string/delay_in_second"
        android:labelFor="@id/editTextDelay"
        />

    <EditText
        android:id="@+id/editTextDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDelayLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/delayInSecond"
        />

    <Switch
        android:id="@+id/switchSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDelay"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:minHeight="48dp"
        android:text="@string/make_a_sound_when_sending_geoloc"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchSound"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:onClick="onStartClick"
        android:text="@string/start_sending_geoloc" />


</RelativeLayout>