<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="320dp"
        android:layout_height="161dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/jlg_tracker"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jlg_tracker"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/textViewJSONLabel"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/json_sent_to_url" />

        <TextView
            android:id="@+id/textViewJSONContent"
            android:layout_width="match_parent"
            android:layout_height="361dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:text="@string/json_default_content" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/stop_sending_geoloc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>